--- a/oefening-03/index.html
+++ b/oefening-03/index.html
@@ -8,7 +8,22 @@
 </head>
 <body>
 
-
-    
+    <header>
+    hoofding 
+    <nav>navigatie</nav>
+    </header>
+    <main>
+    <h1>hoofdtitel</h1>
+    <section>
+        <article>artikel1</article>
+        <article>artikel2</article>
+    </section>
+    <section>
+        <article>artikel3</article>
+        <article>artikel4</article>
+    </section>
+    <aside>zijbalk</aside>
+    <footer>voeteinde</footer>
+    </main>
 </body>
 </html>
